<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_gravity="center"
            android:background="@drawable/border_sensor"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="6dp"
            android:alpha="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:id="@+id/iv_logo"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/mock_content_desc"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="140dp"
                        android:layout_height="25dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/app_name"
                        android:id="@+id/txv_name"
                        android:gravity="center_horizontal"
                        android:textSize="9pt" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/mock_version"
                        android:id="@+id/txv_version"
                        android:gravity="center_horizontal"
                        android:textSize="8pt"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ant_feature"
                android:id="@+id/txv_label_0th"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                android:id="@+id/txv_ant_feature"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ant_radio_service"
                android:id="@+id/txv_label_1st"
                android:gravity="right"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_version"
                android:id="@+id/txv_ant_ver"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/antplus_plugins_service"
                android:id="@+id/txv_label_2nd"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_version"
                android:id="@+id/txv_antplus_ver"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signal_service"
                android:id="@+id/txv_label_8th"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_version"
                android:id="@+id/txv_signal_service"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_os"
                android:id="@+id/txv_label_3rd"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_version"
                android:id="@+id/txv_android_ver"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_smart"
                android:id="@+id/txv_label_4th"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compatible"
                android:id="@+id/txv_ble_compat"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_model"
                android:id="@+id/txv_label_5th"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_model"
                android:id="@+id/txv_model"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolution_x"
                android:id="@+id/txv_label_6th"
                android:layout_gravity="right"
                android:singleLine="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_res_x"
                android:id="@+id/txv_res_x"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolution_y"
                android:id="@+id/txv_label_7th"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_res_y"
                android:id="@+id/txv_res_y"
                android:layout_marginLeft="10dp" />

        </GridLayout>
    </FrameLayout>

</RelativeLayout>