<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/scan_guide_msg1"
        android:id="@+id/txv_label_0th" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/tbl_proto">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/iv_ant"
                android:src="@drawable/corner_antplus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_guide_ant"
                android:id="@+id/txv_label_1st"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/iv_ble"
                android:src="@drawable/corner_bluetooth" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_guide_ble"
                android:id="@+id/txv_label_2nd"
                android:layout_marginLeft="10dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_guide_msg2"
        android:id="@+id/txv_label_3rd"
        android:singleLine="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_guide_skip"
        android:id="@+id/chk_never_hint"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="10dp" />

</LinearLayout>