<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_logo"
            android:layout_gravity="center"
            android:src="@drawable/cat_pink_0"
            android:layout_centerInParent="true"
            android:contentDescription="@string/mock_content_desc" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/iv_logo"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/txv_name"
                android:textSize="8pt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_version"
                android:id="@+id/txv_version"
                android:layout_marginLeft="5dp"
                android:textSize="7pt" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="啟動中，請稍後 ..."
            android:id="@+id/txv_prompt"
            android:textColor="#fff"
            android:textSize="10pt"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp" />

        <com.facebook.widget.LoginButton
            android:id="@+id/btnFbAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>

</LinearLayout>