<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#000000">

    <ImageView android:id="@+id/iv_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/panel_bg_1196"
        android:scaleType="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/mock_content_desc"
        android:layout_alignParentTop="false" />

    <ImageView android:id="@+id/iv_speed"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="83dp"
        android:background="@drawable/border_dashed_circle"
        android:scaleType="center"
        android:contentDescription="@string/mock_content_desc" />

    <ImageView android:id="@+id/iv_calories"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="18dp"
        android:layout_toLeftOf="@id/iv_speed"
        android:layout_alignTop="@id/iv_speed"
        android:background="@drawable/border_dashed_circle"
        android:contentDescription="@string/mock_content_desc" />

    <TextView android:id="@+id/txv_heartrate"
        android:text="@string/mock_heart_rate"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/iv_speed"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="275dp"
        android:textSize="11pt"
        android:gravity="center_horizontal|top"
        android:background="@drawable/border_dashed_rect"
        android:textColor="@color/light_text" />

    <ImageView android:id="@+id/iv_cadence"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@id/iv_speed"
        android:layout_alignTop="@id/iv_speed"
        android:background="@drawable/border_dashed_circle"
        android:contentDescription="@string/mock_content_desc" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/iv_heartrate"
        android:src="@drawable/heart96"
        android:layout_alignTop="@+id/iv_speed"
        android:layout_marginTop="-18dp"
        android:layout_marginRight="125dp"
        android:contentDescription="@string/mock_content_desc"
        android:layout_toLeftOf="@+id/iv_speed" />

    <TextView android:id="@+id/txv_power"
        android:text="@string/mock_power"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_speed"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="275dp"
        android:textSize="11pt"
        android:gravity="center_horizontal|top"
        android:background="@drawable/border_dashed_rect"
        android:textColor="@color/light_text" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/iv_power"
        android:layout_alignTop="@+id/iv_speed"
        android:src="@drawable/power96"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="-18dp"
        android:contentDescription="@string/mock_content_desc"
        android:layout_toRightOf="@+id/iv_speed" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_cat_pink"
        android:src="@drawable/cat_pink"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="94dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/mock_content_desc" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/iv_wheel"
        android:src="@drawable/wheel_level"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="62dp"
        android:contentDescription="@string/mock_content_desc" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_drink"
        android:contentDescription="@string/mock_content_desc"
        android:src="@drawable/drink"
        android:layout_alignBottom="@+id/iv_calories"
        android:layout_alignLeft="@+id/iv_calories"
        android:layout_marginLeft="63dp"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10:37"
        android:id="@+id/txv_now"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:textSize="8pt"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="81%"
        android:id="@+id/txv_battery"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:layout_marginRight="65dp"
        android:textSize="8pt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="19°C"
        android:id="@+id/txv_temperature"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:textSize="8pt" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="195dp"
        android:background="@drawable/border_dashed_rect">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_d2"
            android:src="@drawable/distance_digit"
            android:contentDescription="@string/mock_content_desc"
            android:layout_marginLeft="5dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_d1"
            android:src="@drawable/distance_digit"
            android:contentDescription="@string/mock_content_desc" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_d0"
            android:src="@drawable/distance_digit"
            android:contentDescription="@string/mock_content_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_dot"
            android:src="@drawable/digit_dot"
            android:contentDescription="@string/mock_content_desc"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_dn1"
            android:src="@drawable/distance_digit"
            android:contentDescription="@string/mock_content_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="K"
            android:id="@+id/txv_dist_unit"
            android:layout_marginLeft="3dp"
            android:textColor="#000"
            android:textSize="8pt"
            android:textStyle="bold"
            android:layout_marginTop="-3dp" />

    </LinearLayout>

</RelativeLayout>
